Fixed search throbber in high contrast mode

--- a/css/search.css
+++ b/css/search.css
@@ -29,6 +29,7 @@ h2 {
     background-color 0.2s;
 }
 
+/* A matching search result */
 .search-results-match {
   display: grid;
   grid-template-columns: 1fr 3fr;
@@ -102,8 +103,8 @@ h2 {
 
 /* Throbber on slow search loading */
 .throbber {
-  border: 4px solid rgba(0, 0, 0, 0.2);
-  border-top: 4px solid #000000;
+  border: 0.25em solid rgba(0, 0, 0, 0.2);
+  border-top: 0.25em solid #000000;
   border-radius: 50%;
   width: 3em;
   height: 3em;
@@ -127,7 +128,7 @@ h2 {
 
   /* Throbber color change */
   .throbber {
-    border-top: 4px solid #E7E7E7;
+    border-top: 0.25em solid #E7E7E7;
   }
 
   /* Currently hovered/focused search result match background */
@@ -150,6 +151,12 @@ h2 {
   /* Makes focus/hover on links noticeable */
   .search-results-match:hover, .search-results-match:focus {
     border: 2px solid Highlight;
+  }
+
+  /* Throbber background becomes solid */
+  .throbber {
+    border: 0.25em solid Background;
+    border-top: 0.25em solid CanvasText;
   }
 }
 
